--- a/src/app/listtask/listtask.component.html
+++ b/src/app/listtask/listtask.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-    <h1 class="mat-h1">Projects</h1>
+    <h1 class="mat-h1">Tasks List</h1>
     <mat-card-content class="my-3 dashboard-card-content">
         <!-- Name Column -->
         <mat-form-field>
@@ -11,8 +11,8 @@
 
             <!-- Position Column -->
             <ng-container matColumnDef="projectName">
-              <th mat-header-cell *matHeaderCellDef> No. </th>
-              <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+              <th mat-header-cell *matHeaderCellDef> Project Name </th>
+              <td mat-cell *matCellDef="let row"> {{row.projectName}} </td>
             </ng-container>
 
             <!-- Name Column -->
@@ -22,14 +22,8 @@
             </ng-container>
 
             <!-- Weight Column -->
-            <ng-container matColumnDef="projectMember">
-              <th mat-header-cell *matHeaderCellDef> Members </th>
-              <td mat-cell *matCellDef="let row"> {{row.projectMember}} </td>
-            </ng-container>
-
-            <!-- Symbol Column -->
             <ng-container matColumnDef="projectManager">
-              <th mat-header-cell *matHeaderCellDef> Project Manager </th>
+              <th mat-header-cell *matHeaderCellDef> Members </th>
               <td mat-cell *matCellDef="let row"> {{row.projectManager}} </td>
             </ng-container>
 
@@ -72,8 +66,8 @@
               </td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
 
           <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
